Pass the parent observation to the avisor observation instrumnatation